# e2e_heart_failure_predictor

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pipeline.yaml
notebook/: dry_run_0.ipynb  dry_run_1.ipynb
src/: logger.py  main.py
src/config/: __init__.py  core.py  dataset_config.py  hyperparams_config.py
src/database/: db.py  feature_store.py
src/model/: exception.py  pipeline.py
src/pipeline/: feature_pipeline.py  inference_pipeline.py  training_pipeline.py
src/util/: artifacts.py  evaluation.py  kaggle.py  pre_process.py
