[tool.poetry]
name = "e2e_heart_failure_predictor"
version = "0.1.0"
description = ""
authors = ["Chiraj Jayaraman"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
numpy = "^1.26.4"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
scikit-learn = "^1.4.1.post1"
fire = "^0.6.0"


[tool.poetry.group.dev.dependencies]
ipywidgets = "^8.1.2"
jupyterlab = "^4.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
